--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 # Usage: pip install -r requirements.txt
 
 # Base ------------------------------------------------------------------------
+easyocr
+Flask
 gitpython>=3.1.30
 matplotlib>=3.3
 numpy>=1.22.2
